--- a/TodoListClient/MainWindow.xaml
+++ b/TodoListClient/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         x:Class="TodoListClient.MainWindow"
-        Title="To Do List Client" Height="400" Width="400" WindowStartupLocation="CenterScreen">
+        Title="To Do List Client" Height="400" Width="503.497" WindowStartupLocation="CenterScreen">
     <Grid Margin="12">
         <Grid.Resources>
             <VisualBrush x:Key="TodoHint" Stretch="None" AlignmentX="Left" AlignmentY="Top">
@@ -18,9 +18,9 @@
             </VisualBrush>
         </Grid.Resources>
         <StackPanel Grid.Row="0" Margin="5" VerticalAlignment="Top" Height="351">
-            <Grid HorizontalAlignment="Left" Width="346">
+            <Grid HorizontalAlignment="Left" Width="451">
                 <Label HorizontalAlignment="Left" Content="Not Signed" Margin="0" x:Name="UserName" Width="261" Height="30"/>
-                <Button HorizontalAlignment="Right" Content="Sign In" Margin="0" Click="SignIn" x:Name="SignInButton" Width="80" Height="30">
+                <Button HorizontalAlignment="Right" Content="Sign In" Margin="0,0,5,0" Click="SignIn" x:Name="SignInButton" Width="80" Height="30">
                     <Button.Style>
                         <Style TargetType="{x:Type Button}">
                             <!-- "<Setter Property="IsEnabled" Value="False" /> -->
@@ -30,7 +30,7 @@
             </Grid>
             <GroupBox Margin="0,0,0,0" Header="Create a To Do item">
 
-                <Grid Margin="0" HorizontalAlignment="Left" Width="388" >
+                <Grid Margin="0,0,-2,0" HorizontalAlignment="Left" Width="451" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="130*"/>
                         <ColumnDefinition Width="85*"/>
@@ -48,7 +48,8 @@
                             </Style>
                         </TextBox.Style>
                     </TextBox>
-                    <Button Grid.Column="1" Content="Add item" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="101" RenderTransformOrigin="-0.013,0.15" Click="AddTodoItem" Height="34" IsDefault="True" TabIndex="2"/>
+                    <Button Grid.Column="1" Content="Add item" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Width="78" RenderTransformOrigin="-0.013,0.15" Click="AddTodoItem" Height="34" IsDefault="True" TabIndex="2"/>
+                    <Button Grid.Column="1" Content="Refresh" Margin="93,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.013,0.15" Click="RefreshList" Height="34" IsDefault="True" TabIndex="2" HorizontalAlignment="Left" Width="75"/>
                 </Grid>
 
             </GroupBox>
